Separate TLS from Auth and add dtrace functionality.
See Riak ticket 2815